added javascript content

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 <body>
     <div class="container">
+    <!-- <button type="button" id="btn">Click Me!</button> -->
 
     <header>
         <nav class="navbar">
@@ -34,13 +35,21 @@
         </div>
 
         <div class="hamburger">
-            <div class="bar"></div>
-            <div class="bar"></div>
-            <div class="bar"></div>
+            <div class="bar1"></div>
+            <div class="bar2"></div>
+            <div class="bar3"></div>
         </div>
 
         </nav>
     </header>
+
+    <nav class="mobileNav">
+        <p>Work</p>
+        <p>Contact</p>
+        <img class="nav-icon" src="images/dribble_icon.png" alt="">
+        <img class="nav-icon" src="images/insta_icon.png" alt="">
+        <img class="nav-icon" src="images/v_icon.png" alt="">
+    </nav>
 
     <main class="project-grid">
         <div class="project" id="eth">
@@ -88,6 +97,8 @@
     </footer>
 
     </div>
+
+    <script src="index.js"></script>
 </body>
 
 </html>
